k8s-manifasts/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 128Mi

          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 10

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: vote-app-postgres-pvc
