k8s-manifasts/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app-result
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: "omarghonim/result:latest"
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL 
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000 #8081

          livenessProbe:
            httpGet:
              path: /   
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 128Mi
