k8s-manifasts/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app-worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: "omarghonim/worker:latest"
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL 
            seccompProfile:
                type: RuntimeDefault
          
          livenessProbe:
            exec:
               command: ["sh", "-c", "echo ok"]
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 128Mi
