k8s-manifasts/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app-result
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 
  selector:
    app: result
