k8s-manifasts/vote-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app-vote
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: vote
