k8s-manifasts/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-app-db-allow-policy
spec:
  podSelector:
    matchLabels:
      app: postgres
             
  policyTypes:
    - Ingress             
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: worker   
      - podSelector:
          matchLabels:
            app: result   
      ports:
        - protocol: TCP
          port: 5432
